--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">parkrio</string>
-    <string name="loginTitle">파크리오 원격검침 조회</string>
+    <string name="loginTitle">원격검침 조회</string>
     <string name="usernameLabel">Username :</string>
     <string name="passwordLabel">Password :</string>
-    <string name="rememberidLabel">remember id/pwd</string>
-    <string name="loginBtnText">Login</string>
-    <string name="exitBtnText">Exit</string>
+    <string name="rememberidLabel">ID/비밀번호 기억하기</string>
+    <string name="loginBtnText">로그인</string>
+    <string name="exitBtnText">종료</string>
         
 </resources>
