--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">parkrio</string>
+    <string name="base_url">211.49.175.211</string>
     <string name="loginTitle">원격검침 조회</string>
     <string name="usernameLabel">Username :</string>
     <string name="passwordLabel">Password :</string>
