--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">parkrio</string>
     <string name="base_url">http://211.49.175.211/</string>
     <string name="loginTitle">원격검침 조회</string>
@@ -8,5 +9,10 @@
     <string name="rememberidLabel">ID/비밀번호 기억하기</string>
     <string name="loginBtnText">로그인</string>
     <string name="exitBtnText">종료</string>
-        
+    <string name="title_activity_chart">검침 차트</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_section1">일별</string>
+    <string name="title_section2">월별</string>
+    <string name="title_section3">연별</string>
+
 </resources>
